--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
+    "reset-css": "^3.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
