--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.12.1",
     "fastclick": "^1.0.6",
     "reset-css": "^3.0.0",
     "stylus": "^0.54.5",
